--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,8 +20,11 @@
                 <% files.forEach(function(val){ %>
                     <div class="task w-72 px-3 py-4 min-w-72 rounded-md bg-zinc-800">
                         <h1 class="text-white text-3xl tracking-tighter"><%= val %></h1>
-                        <a  class="text-blue-500 inline mt-3" href="/file/<%= val%>">See here</a>
+                        <div class="flex w-full justify-between items-center mt-2">
+                            <a  class="text-blue-500 inline " href="/file/<%= val%>">See here</a>
+                            <a class="text-zinc-500" href="/edit/<%=val%>">Edit</a>
                         
+                        </div>
                     </div>
 
               <%  }) %>
